# scripts

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
cmake/Modules/: FindZenity.cmake
src/: benchmark
